# mikanos-rust

./: .gitignore  .mtoolsrc  Cargo.toml  Dockerfile  README.md  make_img.sh  run_qemu.sh
.cargo/: config
.devcontainer/: devcontainer.json
bootloader/: .gitignore  Cargo.toml  build.sh
bootloader/.cargo/: config.toml
bootloader/src/: main.rs  writer_config.rs
common/: Cargo.toml
common/src/: lib.rs  memory_map.rs  writer_config.rs
commons/src/: lib.rs
commons/src/writer/: mod.rs
kernel/: Cargo.toml  build.rs  build.sh  make_and_run_qemu.sh
kernel/.cargo/: config.toml
kernel/src/: acpi.rs  allocator.rs  ascii.rs  asm.s  backtrace.rs  console.rs  entry.rs  error.rs  font.rs  graphics.rs  interrupt.rs  io_port.rs  keyboard.rs  lib.rs  logger.rs  main.rs  math.rs  memory_manager.rs  mouse.rs  paging.rs  panic.rs  pci.rs  segment.rs  serial.rs  timer.rs  window.rs
kernel/src/preemptive/: context.rs
kernel/src/task/: executor.rs  mod.rs
kernel/src/usb/: controller.rs  device.rs  memory_pool.rs  mod.rs  registers.rs  trb.rs  usb_allocator.rs
kernel/src/writer/: mod.rs
kernel/tests/: broken_mem_check_test.rs  entry_and_logger_test.rs  entry_test.rs  panic_print.rs
lib/: OVMF_CODE.fd  OVMF_VARS.fd
src/: main.rs
tools/: makefont.py  mouse.py
