[package]
name = "mikanos-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = {version = "0.35.0", features = ["alloc", "global_allocator", "logger", "panic_handler"]}
elf_rs = "0.3.1"
common = {path = "../common"}
log = "0.4.27"
